--- a/index.html
+++ b/index.html
@@ -34,24 +34,11 @@
                         <li class="dropdown">
           					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Priorities<span class="caret"></span></a>
          						<ul class="dropdown-menu">
-           							<li><a href="#">Action</a></li>
-            						<li><a href="#">Another action</a></li>
-            						<li><a href="#">Something else here</a></li>
-            						<li role="separator" class="divider"></li>
-            						<li><a href="#">Separated link</a></li>
-            						<li role="separator" class="divider"></li>
-            						<li><a href="#">One more separated link</a></li>
+           							<li><a href="#five">Health and Wellness</a></li>
+            						<li><a href="#six">Economic Opportunity</a></li>
+            						<li><a href="#seven">Invest in Texas</a></li>
           						</ul>
         					</li>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#five">Health and Wellness</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#six">Economic Opportunity</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#seven">Invest in Texas</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#last">Contact</a>
