--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
                         <a class="page-scroll" href="#one">The Best Texas</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#four"></a>
-                        <li class="dropdown">
-          					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Our Priorities<span class="caret"></span></a>
-         						<ul class="dropdown-menu">
-           							<li><a href="#five">Health and Wellness</a></li>
-            						<li><a href="#six">Economic Opportunity</a></li>
-            						<li><a href="#seven">Invest in Texas</a></li>
-          						</ul>
-        					</li>
+                        <a class="page-scroll" href="#four">Our Priorities</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#five">Health and Wellness</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#six">Economic Opportunity</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#seven">Invest in Texas</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#last">Contact</a>
