--- a/index.html
+++ b/index.html
@@ -74,25 +74,23 @@
             	<img src="img/dome.jpg" alt="The Capitol Dome" id="dome">
             </div>
                 <div class="col-sm-6">
-                    <h2 class="margin-top-0 text-primary">The Best Texas</h2>
+                    <h2 class="margin-top-0 text-primary" id="four">Our Priorities</h2>
                     <br>
                     <p class="text-faded">
-                        At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
+                        <p class="introduction">A</p><p>t the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
                 <br>
                 <br>
-Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families.</p>
+Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas – a proud state that sets the bar nationally by expanding opportunity for all.</p></p>
                 </div>
             </div>
         </div>
     </section>
     
-    <section class="container-fluid" id="four">
+    <section class="container-fluid" id="five">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
-                <h2 class="text-center text-primary">Our Priorities</h2>
-                <hr>
                 <div class="media wow fadeInRight">
-                    <h2 id="five" class="page-scroll">Ensure Health and Wellness</h2>
+                    <h2 class="page-scroll">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
                     <h4 class="visiontitlehealthhealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
