--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                     <h2 class="margin-top-0 text-primary" id="four">Our Priorities</h2>
                     <br>
                     <p class="text-faded">
-                        <p class="introduction">A</p><p>t the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
+                        At the Center for Public Policy Priorities, we believe in a Texas that offers everyone the chance to compete and succeed in life. Legislative advocacy is one important way we use data and analysis to enable Texans of all backgrounds to reach their full potential. 
                 <br>
                 <br>
-Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas – a proud state that sets the bar nationally by expanding opportunity for all.</p></p>
+Our bold, research-driven 2017 legislative priorities dare Texas leaders to make Texas the best state for hard-working people and their families. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas – a proud state that sets the bar nationally by expanding opportunity for all.</p>
                 </div>
             </div>
         </div>
