--- a/index.html
+++ b/index.html
@@ -276,9 +276,10 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="col-xs-12 col-sm-3 text-right">
                     <h4>Follow</h4>
                     <ul class="list-inline">
-                      <li><a rel="nofollow" href="" title="Twitter"><i class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
-                      <li><a rel="nofollow" href="" title="Facebook"><i class="icon-lg ion-social-facebook-outline"></i></a>&nbsp;</li>
-                      <li><a rel="nofollow" href="" title="Dribble"><i class="icon-lg ion-social-dribbble-outline"></i></a></li>
+                      <li><a rel="nofollow" href="http://www.twitter.com/cppp_tx" title="Twitter"><i class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
+                      <li><a rel="nofollow" href="http://www.facebook.com/bettertexas/" title="Facebook"><i class="icon-lg ion-social-facebook-outline"></i></a>&nbsp;</li>
+                      <li><a rel="nofollow" href="http://www.instagram.com/cppp_tx" title="Instagram"><i class="icon-lg ion-social-instagram-outline"></i></a></li>
+                      <li><a rel="nofollow" href="http://www.youtube.com/user/CPPPvideo" title="Youtube"><i class="icon-lg ion-social-youtube-outline"></i></a></li>
                     </ul>
                 </div>
             </div>
