--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <p>CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:oliver@cppp.org">oliver@cppp.org.</a></p>
                 </div>
                 
-                <div class="col-xs-12 col-sm-6 column">
+                <div class="col-xs-12 col-sm-6 column" id="last">
                     <h4>Follow</h4>
                     <ul class="list-inline">
                       <li><a rel="nofollow" href="http://www.twitter.com/cppp_tx" title="Twitter"><i class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
@@ -260,19 +260,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         </div>
         </div>
     </div>
-    <div id="alertModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-        	<div class="modal-body">
-        		<h2 class="text-center">Nice Job!</h2>
-        		<p class="text-center">You clicked the button, but it doesn't actually go anywhere because this is only a demo.</p>
-        		<p class="text-center"><a href="http://www.bootstrapzero.com">Learn more at BootstrapZero</a></p>
-        		<br/>
-        		<button class="btn btn-primary btn-lg center-block" data-dismiss="modal" aria-hidden="true">OK <i class="ion-android-close"></i></button>
-        	</div>
-        </div>
-        </div>
-    </div>
+    
     <!--scripts loaded here from cdn for performance -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
