--- a/index.html
+++ b/index.html
@@ -209,13 +209,16 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
     <footer id="footer">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12 col-sm-6">
+            	<div class="col-xs-12 col-sm-4">
+                	<a class="twitter-timeline" href="https://twitter.com/CPPP_TX">Tweets by CPPP_TX</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                </div>
+                <div class="col-xs-12 col-sm-4">
                     <h4>About</h4>
                     <a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" class="logo" alt="CPPP Logo"></a>
                     <p>CPPP is an independent public policy organization that uses data and analysis to advocate for solutions that enable Texans of all backgrounds to reach their full potential. We dare Texas to be the best state for hard-working people and their families. If you have any questions about this data or something else in our work, please contact Oliver Bernstein at <a href="mailto:oliver@cppp.org">oliver@cppp.org.</a></p>
                 </div>
                 
-                <div class="col-xs-12 col-sm-6" id="last">
+                <div class="col-xs-12 col-sm-4" id="last">
                     <h4>Follow</h4>
                     <ul class="list-inline">
                       <li><a rel="nofollow" href="http://www.twitter.com/cppp_tx" title="Twitter"><i class="icon-lg ion-social-twitter-outline"></i></a>&nbsp;</li>
