--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         <div class="container-fluid">
             <div class="row">
             	<div class="col-xs-12 col-sm-4">
-                	<a class="twitter-timeline" href="https://twitter.com/CPPP_TX">Tweets by CPPP_TX</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                	<a class="twitter-timeline" data-width="220" data-height="300" href="https://twitter.com/CPPP_TX">Tweets by CPPP_TX</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
                 <div class="col-xs-12 col-sm-4">
                     <h4>About</h4>
