--- a/index.html
+++ b/index.html
@@ -250,9 +250,10 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
         <div class="modal-content">
         	<div class="modal-body">
         		<h5 class="text-center">
-        		    Our Vision and Core Purpose
+        		    
         		</h5>
         		<p class="text-justify">
+                <a href="http://cppp.org"><img src="img/2015_COM_CPPP_logo_letterhead.png" class="logo img-responsive center-block" alt="CPPP Logo"></a>
         		    At the <a href="http://cppp.org" alt="CPPP Site">Center for Public Policy Priorities</a>, we believe in a Texas that offers everyone the chance to compete and succeed in life. We envision a Texas where everyone is healthy, well-educated, and financially secure. We want the best Texas - a proud state that sets the bar nationally by expanding opportunity for all. 
                     <br>
                     <br>
