--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
                     <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
+                    <div class="col-xs-12"><img src="img/heart.png" alt="Heart" class="priorityimg"></div>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
     							<ul>
