--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                 <div class="media wow fadeInRight">
                     <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
-                    <div class="text-xs-right">
+                    <div class="pull-xs-left">
                     <img src="img/heart.png" alt="Heart" class="priorityimg img-responsive center-block">
                     </div>
                     <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
