--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                     <h2 class="page-scroll" id="five">Ensure Health and Wellness</h2>
                     <div class="media-body media-middle">
                     <div class="img-responsive pull-xs-left">
-                    <img src="img/heart.png" alt="Heart" class="priorityimg">
+                    	<img src="img/heart.png" alt="Heart" class="priorityimg">
                     </div>
                     <h4 class="visiontitlehealth">All Texans have meaningful access to affordable health care.</h4>
                        		<div class="panel panel-default">	
@@ -102,6 +102,9 @@ Our bold, research-driven 2017 legislative priorities dare Texas leaders to make
                                 </ul>
   								</div>
 							</div>
+                    <div class="img-responsive pull-xs-right">
+                    	<img src="img/firstaid.png" alt="First Aid Kit" class="priorityimg">
+                    </div>
                     <h4 class="visiontitlehealth">All Texans are insured and remain insured.</h4>
                        		<div class="panel panel-default">	
   							<div class="panel-body">
